[package]
name = "simplerand"
version = "1.4.0"
authors = ["PumpkinSeed <qwer.kocka@gmail.com>"]
edition = "2018"
description = "Simple and fast random number generator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PumpkinSeed/srand"
keywords = ["random"]

[dependencies]
lazy_static = "1.5.0"
